agregado core cordoba

--- a/src/app/pages/tab2/tab2.page.html
+++ b/src/app/pages/tab2/tab2.page.html
@@ -30,7 +30,7 @@
     #scroll
     threshold="25%"
     position="bottom"
-    (ionInfinite)="loadData($event)"
+    (ionInfinite)="loadData()"
   >
     <ion-infinite-scroll-content
       loadingSpinner="bubbles"
