--- a/src/app/components/article/article.component.html
+++ b/src/app/components/article/article.component.html
@@ -1,13 +1,13 @@
 <ion-card>
   <ion-card-subtitle class="ion-margin">
-    <ion-row class="ion-align-items-center" (click)="openArticle()">
-      <ion-col class="ion-margin">
+    <ion-row class="ion-align-items-center">
+      <ion-col class="ion-margin" (click)="openArticle()">
         <span class="text-primary">{{ id }}. </span>
         <span class="article-source-name">{{ article.source.name }}</span>
       </ion-col>
 
       <ion-col align="right">
-        <ion-button (click)="onClick()" fill="clear">
+        <ion-button (click)="onOpenMenu()" fill="clear">
           <ion-icon
             slot="icon-only"
             name="ellipsis-horizontal-outline"
@@ -17,7 +17,10 @@
     </ion-row>
   </ion-card-subtitle>
 
-  <ion-card-title class="ion-padding-horizontal ion-margin-bottom">
+  <ion-card-title
+    class="ion-padding-horizontal ion-margin-bottom"
+    (click)="openArticle()"
+  >
     {{ article.title }}
   </ion-card-title>
 
